# feature_flag

./: .env.example  .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
apps/server/: Cargo.toml  Dockerfile
apps/server/migrations/: 20240101000001_initial_schema.sql
apps/server/src/: broadcaster.rs  config.rs  main.rs  state.rs
apps/server/src/api/middleware/: auth.rs
apps/server/src/api/routes/: audit_log.rs  environments.rs  evaluate.rs  flags.rs  health.rs  mod.rs  projects.rs  sdk_keys.rs  segments.rs  setup.rs  stream.rs
apps/server/src/auth/: api_keys.rs  jwt.rs  mod.rs
apps/server/src/store/: mod.rs  models.rs  postgres.rs  redis.rs
apps/web/: .env.local.example  .gitignore  package-lock.json  package.json  tailwind.config.ts
apps/web/.next/: app-build-manifest.json  build-manifest.json  react-loadable-manifest.json  trace
apps/web/.next/server/: app-paths-manifest.json  edge-runtime-webpack.js  middleware-build-manifest.js  middleware-manifest.json  middleware-react-loadable-manifest.js  middleware.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
apps/web/.next/server/app/: page.js  page_client-reference-manifest.js
apps/web/.next/server/vendor-chunks/: @clerk.js  @swc.js  dequal.js  next.js  swr.js  use-sync-external-store.js
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/blog/: page.tsx
apps/web/app/dashboard/: layout.tsx  page.tsx
apps/web/app/docs/: page.tsx
apps/web/app/pricing/: page.tsx
apps/web/components/: BlogPreview.tsx  CTABanner.tsx  DeepDive.tsx  Features.tsx  Footer.tsx  GrowthStages.tsx  Hero.tsx  HowItWorks.tsx  Navbar.tsx  OpenSource.tsx  Pricing.tsx  ScrollReveal.tsx  Stats.tsx  Testimonials.tsx  TrustedBy.tsx
apps/web/components/dashboard/: ErrorState.tsx  LoadingState.tsx  Modal.tsx  SetupPrompt.tsx  Sidebar.tsx
apps/web/lib/: api.ts  project-context.tsx  use-api-data.ts
deploy/: docker-compose.yml
sdks/js/: package.json  tsconfig.json
sdks/js/src/: client.ts  evaluator.ts  hasher.ts  index.ts  operators.ts  transform.ts  types.ts
sdks/js/src/__tests__/: evaluator.test.ts  hasher.test.ts  transform.test.ts
sdks/react/: package.json  tsconfig.json  tsup.config.ts
sdks/react/src/: context.ts  index.ts  provider.tsx  types.ts
sdks/react/src/__tests__/: hooks.test.tsx  provider.test.tsx
sdks/react/src/hooks/: index.ts  use-boolean-flag.ts  use-evaluate.ts  use-flag.ts  use-flagforge.ts  use-json-flag.ts  use-number-flag.ts  use-string-flag.ts
(+31 files in other folders)
