[package]
name = "flagforge-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "FlagForge core server — REST API, evaluation, SSE streaming"

[dependencies]
eval-core = { workspace = true }

# Async runtime + web
tokio = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true }

# Redis
redis = { workspace = true }

# Auth
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Async utilities
async-stream = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
rand = { workspace = true }

sha2 = "0.10"
hex = "0.4"
tokio-stream = "0.1"
